--- a/sass/style.scss
+++ b/sass/style.scss
@@ -96,7 +96,7 @@ header{
         margin-bottom: 1em;
 		ul{
 			overflow: hidden;
-            margin: 0 auto;
+      margin: 0 auto;
 			padding: 0;
 			li{
 				list-style: none;
@@ -250,18 +250,31 @@ header{
         border-bottom-style: none;
         h2{
             @include adjust-font-size-to(20px, 1);
+            margin: 5rem 0 2rem 0;
             padding-bottom: 10px;
             padding-left: 0.5em;
-            border-bottom: 3px solid #333;
+            // border-bottom: 3px solid #333;
         }
         h3{
-          border-left: 10px solid #999;
-          border-bottom: 2px solid #999;
-          padding-left: 0.5em;
-          padding-bottom: 0.2em;
+            // border-left: 10px solid #999;
+            // border-bottom: 2px solid #999;
+            @include adjust-font-size-to(16px, 1);
+            margin: 4rem 0 2rem 0;
+            padding-left: 0.5em;
+            padding-bottom: 0.2em;
+            
+            &:before{
+              display: inline-block;
+              width: 0.75rem;
+              height: 0.75rem;
+              content: "";
+              margin-right: 0.5rem;
+              border-radius: 100%;
+              background-color: #333;
+            }
         }
         p, li{
-            @include adjust-font-size-to(15px, 1);
+            @include adjust-font-size-to(16px, 1);
         }
         p{
             margin-bottom: 2em;
@@ -270,10 +283,21 @@ header{
         time{
             color: #999;
         }
+        ul, ol{
+            margin: 2rem 0;
+            padding: 1.5rem 3.5rem;
+            background-color: #f6f6f6;
+            border-radius: 5px;
+
+            li{
+              padding: 0 0.25rem;
+              font-size: 0.95rem;
+            }
+        }
         p + ul, 
         p + ol{
-            margin-top: -1em;
-            padding: 0 0 0 2em;
+            // margin-top: -1em;
+            // padding: 0 0 0 2em;
         }
         table{
             th,td{
@@ -357,6 +381,23 @@ header{
                     padding-left: 1em;
                 }
             }
+        }
+        .widget_recent_entries{
+          ul{
+            li{
+              margin-bottom: 1rem;
+              line-height: 1.5;
+
+              &:before{
+                display: inline-block;
+                content: "";
+                width: 0.25rem;
+                height: 0.25rem;
+                background-color: #ccc;
+                border-radius: 100%;
+              }
+            }
+          }
         }
         h2{
             @include adjust-font-size-to(16px, 1);
