--- a/style.css
+++ b/style.css
@@ -441,7 +441,7 @@ th {
   padding: 0;
 }
 
-/* line 106, ../../.rbenv/versions/2.2.2/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/typography/_vertical_rhythm.scss */
+/* line 106, ../.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/typography/_vertical_rhythm.scss */
 html {
   font-size: 100%;
   line-height: 1.5em;
@@ -816,40 +816,59 @@ header nav ul li.current-menu-item, header nav ul li:hover {
   font-size: 1.25rem;
   line-height: 24px;
   line-height: 1.5rem;
+  margin: 5rem 0 2rem 0;
   padding-bottom: 10px;
   padding-left: 0.5em;
-  border-bottom: 3px solid #333;
 }
-/* line 257, sass/style.scss */
+/* line 258, sass/style.scss */
 .single article h3 {
-  border-left: 10px solid #999;
-  border-bottom: 2px solid #999;
+  font-size: 16px;
+  font-size: 1rem;
+  line-height: 24px;
+  line-height: 1.5rem;
+  margin: 4rem 0 2rem 0;
   padding-left: 0.5em;
   padding-bottom: 0.2em;
 }
-/* line 263, sass/style.scss */
+/* line 266, sass/style.scss */
+.single article h3:before {
+  display: inline-block;
+  width: 0.75rem;
+  height: 0.75rem;
+  content: "";
+  margin-right: 0.5rem;
+  border-radius: 100%;
+  background-color: #333;
+}
+/* line 276, sass/style.scss */
 .single article p, .single article li {
-  font-size: 15px;
-  font-size: 0.9375rem;
+  font-size: 16px;
+  font-size: 1rem;
   line-height: 24px;
   line-height: 1.5rem;
 }
-/* line 266, sass/style.scss */
+/* line 279, sass/style.scss */
 .single article p {
   margin-bottom: 2em;
   line-height: 1.8;
 }
-/* line 270, sass/style.scss */
+/* line 283, sass/style.scss */
 .single article time {
   color: #999;
 }
-/* line 273, sass/style.scss */
-.single article p + ul,
-.single article p + ol {
-  margin-top: -1em;
-  padding: 0 0 0 2em;
+/* line 286, sass/style.scss */
+.single article ul, .single article ol {
+  margin: 2rem 0;
+  padding: 1.5rem 3.5rem;
+  background-color: #f6f6f6;
+  border-radius: 5px;
 }
-/* line 279, sass/style.scss */
+/* line 292, sass/style.scss */
+.single article ul li, .single article ol li {
+  padding: 0 0.25rem;
+  font-size: 0.95rem;
+}
+/* line 303, sass/style.scss */
 .single article table th, .single article table td {
   padding-left: 1em;
   padding-right: 1em;
@@ -859,29 +878,29 @@ header nav ul li.current-menu-item, header nav ul li:hover {
   line-height: 24px;
   line-height: 1.5rem;
 }
-/* line 285, sass/style.scss */
+/* line 309, sass/style.scss */
 .single article table th {
   border-bottom: 1px solid #ddd;
 }
-/* line 290, sass/style.scss */
+/* line 314, sass/style.scss */
 .single .navigation {
   margin: 2em 0 2em 0;
   overflow: hidden;
 }
-/* line 292, sass/style.scss */
+/* line 316, sass/style.scss */
 .single .navigation span {
   color: #337ab7;
 }
-/* line 296, sass/style.scss */
+/* line 320, sass/style.scss */
 .single .navigation .prev {
   float: left;
 }
-/* line 299, sass/style.scss */
+/* line 323, sass/style.scss */
 .single .navigation .next {
   float: right;
 }
 
-/* line 306, sass/style.scss */
+/* line 330, sass/style.scss */
 .secondary .relation h2 {
   padding-left: 2%;
   font-size: 16px;
@@ -889,12 +908,12 @@ header nav ul li.current-menu-item, header nav ul li:hover {
   line-height: 24px;
   line-height: 1.5rem;
 }
-/* line 310, sass/style.scss */
+/* line 334, sass/style.scss */
 .secondary .relation ul {
   padding: 0;
   overflow: hidden;
 }
-/* line 313, sass/style.scss */
+/* line 337, sass/style.scss */
 .secondary .relation ul li {
   position: relative;
   float: left;
@@ -903,20 +922,20 @@ header nav ul li.current-menu-item, header nav ul li:hover {
   margin: 0 2% 1em 2%;
   list-style: none;
 }
-/* line 320, sass/style.scss */
+/* line 344, sass/style.scss */
 .secondary .relation ul li a {
   text-decoration: none;
 }
-/* line 322, sass/style.scss */
+/* line 346, sass/style.scss */
 .secondary .relation ul li a:hover img {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
   opacity: 0.8;
 }
-/* line 326, sass/style.scss */
+/* line 350, sass/style.scss */
 .secondary .relation ul li img {
   width: 100%;
 }
-/* line 329, sass/style.scss */
+/* line 353, sass/style.scss */
 .secondary .relation ul li h3 {
   width: 96%;
   position: absolute;
@@ -936,15 +955,15 @@ header nav ul li.current-menu-item, header nav ul li:hover {
   opacity: 0.9;
 }
 
-/* line 348, sass/style.scss */
+/* line 372, sass/style.scss */
 .sidebar {
   margin: 0 2% 0 2%;
 }
-/* line 351, sass/style.scss */
+/* line 375, sass/style.scss */
 .sidebar aside ul {
   padding: 0;
 }
-/* line 353, sass/style.scss */
+/* line 377, sass/style.scss */
 .sidebar aside ul li {
   list-style: none;
   font-size: 14px;
@@ -952,23 +971,37 @@ header nav ul li.current-menu-item, header nav ul li:hover {
   line-height: 24px;
   line-height: 1.5rem;
 }
-/* line 356, sass/style.scss */
+/* line 380, sass/style.scss */
 .sidebar aside ul li > ul {
   padding-left: 1em;
 }
-/* line 361, sass/style.scss */
+/* line 387, sass/style.scss */
+.sidebar aside .widget_recent_entries ul li {
+  margin-bottom: 1rem;
+  line-height: 1.5;
+}
+/* line 391, sass/style.scss */
+.sidebar aside .widget_recent_entries ul li:before {
+  display: inline-block;
+  content: "";
+  width: 0.25rem;
+  height: 0.25rem;
+  background-color: #ccc;
+  border-radius: 100%;
+}
+/* line 402, sass/style.scss */
 .sidebar aside h2 {
   font-size: 16px;
   font-size: 1rem;
   line-height: 24px;
   line-height: 1.5rem;
 }
-/* line 364, sass/style.scss */
+/* line 405, sass/style.scss */
 .sidebar aside a {
   color: #337ab7;
 }
 
-/* line 369, sass/style.scss */
+/* line 410, sass/style.scss */
 pre {
   border: 1px solid #ddd;
   margin-top: 24px;
@@ -983,7 +1016,7 @@ pre {
   padding-right: 1rem;
 }
 
-/* line 375, sass/style.scss */
+/* line 416, sass/style.scss */
 footer {
   clear: both;
   height: 60px;
@@ -991,14 +1024,14 @@ footer {
   text-align: center;
 }
 
-/* line 383, sass/style.scss */
+/* line 424, sass/style.scss */
 .pagetop {
   position: fixed;
   bottom: 2%;
   right: 5%;
   z-index: 100;
 }
-/* line 389, sass/style.scss */
+/* line 430, sass/style.scss */
 .pagetop a {
   text-shadow: 1px 1px 0 #fff;
   font-size: 48px;
@@ -1009,11 +1042,11 @@ footer {
 }
 
 @media screen and (min-width: 768px) {
-  /* line 398, sass/style.scss */
+  /* line 439, sass/style.scss */
   header {
     margin: 0 auto 1em auto;
   }
-  /* line 400, sass/style.scss */
+  /* line 441, sass/style.scss */
   header h1 {
     height: 36px;
     padding-left: 60px;
@@ -1028,11 +1061,11 @@ footer {
     background: url("img/logo.svg") no-repeat 10px -2px;
     background-size: 36px 36px;
   }
-  /* line 410, sass/style.scss */
+  /* line 451, sass/style.scss */
   header .search {
     display: none;
   }
-  /* line 413, sass/style.scss */
+  /* line 454, sass/style.scss */
   header .searchform {
     clear: none;
     display: block;
@@ -1043,7 +1076,7 @@ footer {
     margin-bottom: 12px;
     margin-bottom: 0.75rem;
   }
-  /* line 419, sass/style.scss */
+  /* line 460, sass/style.scss */
   header .searchform input {
     border: 1px solid #ccc;
     -moz-border-radius: 3px;
@@ -1052,7 +1085,7 @@ footer {
     font-size: 12px;
     padding: 0.4rem;
   }
-  /* line 426, sass/style.scss */
+  /* line 467, sass/style.scss */
   header .searchform input[type="submit"] {
     padding: 0.4rem 0.7rem;
     font-weight: normal;
@@ -1063,38 +1096,38 @@ footer {
     -webkit-border-radius: 3px;
     border-radius: 3px;
   }
-  /* line 437, sass/style.scss */
+  /* line 478, sass/style.scss */
   header nav ul li {
     height: 48px;
   }
-  /* line 439, sass/style.scss */
+  /* line 480, sass/style.scss */
   header nav ul li a {
     font-size: 16px;
     font-size: 1rem;
     line-height: 48px;
     line-height: 3rem;
   }
-  /* line 441, sass/style.scss */
+  /* line 482, sass/style.scss */
   header nav ul li a:before {
     display: inline;
     padding-right: 0.5rem;
   }
 
-  /* line 451, sass/style.scss */
+  /* line 492, sass/style.scss */
   .contents .main {
     float: left;
     width: 65%;
   }
-  /* line 455, sass/style.scss */
+  /* line 496, sass/style.scss */
   .contents .main .primary section {
     margin-bottom: 2em;
     border-bottom: none;
   }
-  /* line 458, sass/style.scss */
+  /* line 499, sass/style.scss */
   .contents .main .primary section .content {
     margin-left: 1%;
   }
-  /* line 460, sass/style.scss */
+  /* line 501, sass/style.scss */
   .contents .main .primary section .content h2 {
     font-size: 16px;
     font-size: 1rem;
@@ -1110,7 +1143,7 @@ footer {
     padding-bottom: 0.15rem;
     white-space: normal;
   }
-  /* line 466, sass/style.scss */
+  /* line 507, sass/style.scss */
   .contents .main .primary section .content p {
     font-size: 14px;
     font-size: 0.875rem;
@@ -1126,7 +1159,7 @@ footer {
     padding-bottom: 0.3rem;
     white-space: normal;
   }
-  /* line 472, sass/style.scss */
+  /* line 513, sass/style.scss */
   .contents .main .primary section .content time {
     font-size: 12px;
     font-size: 0.75rem;
@@ -1141,13 +1174,13 @@ footer {
     padding-bottom: 5px;
     padding-bottom: 0.3rem;
   }
-  /* line 481, sass/style.scss */
+  /* line 522, sass/style.scss */
   .contents .sidebar {
     float: right;
     width: 25%;
   }
 
-  /* line 487, sass/style.scss */
+  /* line 528, sass/style.scss */
   .pagetop a {
     text-shadow: 1px 1px 0 #fff;
     font-size: 64px;
@@ -1155,18 +1188,18 @@ footer {
     line-height: 96px;
     line-height: 6rem;
   }
-  /* line 490, sass/style.scss */
+  /* line 531, sass/style.scss */
   .pagetop a:hover {
     color: #666;
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 498, sass/style.scss */
+  /* line 539, sass/style.scss */
   header {
     max-width: 1024px;
   }
 
-  /* line 502, sass/style.scss */
+  /* line 543, sass/style.scss */
   .contents {
     max-width: 1024px;
     margin: 0 auto;
